src/stylesheets/main.css
/* Your styles go here */
@import url("bootstrap/dist/css/bootstrap.min.css");
@import url("bootstrap-icons/font/bootstrap-icons.css");

.webercolor {
  background-color: #492365;
}
.text-responsive {
  font-size: calc(100% + 0.3vw + 0.1vh);
}

.jumbo_bg {
  background-image: url("https://static.vecteezy.com/system/resources/previews/012/672/872/non_2x/abstract-blue-geometric-color-gradient-background-basic-shape-of-a-repeating-line-or-triangle-backdrop-pattern-with-the-concept-of-hi-tech-digital-technology-simple-modern-and-futuristic-vector.jpg");
}

.webertext {
  color: #492365;
}

.active {
  text-indent: 2rem;
  background-color: #8446ac;
}

.nav-link {
  margin-right: 1rem;
  transition: all 0.5s ease;
}

.transparent-black{
  background-color: rgba(0, 0, 0, 0.65);
}



@media (max-width: 991px) {
  .nav-link:hover {
    background: linear-gradient(90deg, #492365, #8446ac);
    color: white;

    transform: translateX(2rem);
  }
}

@media (min-width: 768px) {
  .jumbo-text {
    border-top-left-radius: 0;
  }
  .wumbo_round {
    border-radius: 0.5rem;
  }
  .carhov {
    transition: transform 0.1s;
  }
  .carhov:hover {
    transform: scale(1.03);
  }
}

@media (min-width: 992px) {
  .active {
    background-color: #492365;
    border-radius: 1rem;
    text-indent: 0;
    border: 1px solid white;
  }

  .nav-link:hover {
    background: linear-gradient(180deg, #492365, #8446ac);
    border-bottom: 1px solid lightgray;
    transform: translateY(2px);
    border-top-right-radius: 2rem;
    border-top-left-radius: 2rem;
  }
}

table.dataTable thead .sorting:after,
table.dataTable thead .sorting:before,
table.dataTable thead .sorting_asc:after,
table.dataTable thead .sorting_asc:before,
table.dataTable thead .sorting_asc_disabled:after,
table.dataTable thead .sorting_asc_disabled:before,
table.dataTable thead .sorting_desc:after,
table.dataTable thead .sorting_desc:before,
table.dataTable thead .sorting_desc_disabled:after,
table.dataTable thead .sorting_desc_disabled:before {
  bottom: 0.5em;
}

